test/functions/default-arguments/runtime-type-2.good
runtime-type-2.chpl:11: error: halt reached - Domain mismatch passing array argument:
  Formal domain is: {1..7}
  Actual domain is: {1..6}
